tests/invalid/Template_Invalid_5.whiley
function f<S,T>(S s) -> (T t):
    return s